# chompk-bot

./: .env.example  .gitignore  README.md  api.py  bot.py  callback.py  daily_report.py  docker-compose.yaml  dockerfile  exchange.py  indicator.py  main.py  pyproject.toml  requirements.txt  run_bot.py  send_summary.py  solver.py  technical_analysis.py  utils.py
.github/workflows/: daily_report.yml  daily_report_binance.yml  daily_report_bitkub.yml  daily_report_btc.yml  daily_report_ftx.yml  daily_report_kucoin.yml  daily_report_okex.yml  pytest.yml
app/: api.py  bot.py  callback.py  solver.py  technical_analysis.py  utils.py
app/enums/: exchange.py  pairs.py  signal.py
app/exchanges/: __init__.py  base_exchange.py  binance_api.py  bitkub_api.py  exchange_provider.py  ftx_api.py  kucoin_api.py  okx_api.py
app/tests/: test_send_summary.py
docker/: docker-compose.yaml  dockerfile
